{
    "name": "InputControls",
    "maps": [
        {
            "name": "Player",
            "id": "97f7f003-18f0-42ba-9f6f-78630ff800fb",
            "actions": [
                {
                    "name": "Motion",
                    "type": "Value",
                    "id": "422ce071-6abe-4611-8345-41fff31a91b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseRight",
                    "type": "Button",
                    "id": "1a9a5ea9-18bd-4e6c-9f28-51d5dec226f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightPress",
                    "type": "Button",
                    "id": "8d9ae524-30a9-4ff3-a590-fcd7c8a07aea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLeft",
                    "type": "Button",
                    "id": "ecccec7d-9b91-4b47-93a9-08b0179bbbd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "60dc9bf7-d26c-4f43-be6d-9e277d1b68b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "356486b5-1623-48df-8e7f-55a91bf17511",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "07e74a9f-3b6c-4503-be41-b0cf69f1fa4b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f1a6f964-cf18-4971-b6de-b3d98d7ef6d8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f7d5a770-d919-4b3b-84f9-2bc54ac9ca38",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1c2bec22-c29c-4b7a-9bb7-15e9cd8b53df",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Motion",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b355353a-e2b5-4dc9-be99-32e03f4e0e90",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31dd9af2-61df-46cc-b04b-05d7f0057e62",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be656c94-9894-471f-9aa6-525a8799299c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33c38455-ba0c-423d-bd4f-903359056e1c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Global",
            "id": "83d38c2d-b784-4a36-b37a-35ac97b9bd1f",
            "actions": [
                {
                    "name": "Console",
                    "type": "Button",
                    "id": "f60f6da6-033f-4a41-b75f-61454b565718",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "3c59f6b0-053e-47bd-93e2-753c89eb2f73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "767c4e92-2253-4373-bae8-a9c0ca2d092a",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Console",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dcd228c-12c6-40e9-b4ca-8175ba42ddd6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}